updated test numbers and retinomap csv

--- a/mousenet/retinotopics/Polygon Debug.ipynb
+++ b/mousenet/retinotopics/Polygon Debug.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd023a57fd0>"
+       "<matplotlib.legend.Legend at 0x7fae948f2970>"
       ]
      },
      "execution_count": 3,
@@ -358,38 +358,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6_w,12)-aCMA-ES (mu_w=3.7,w_1=40%) in dimension 20 (seed=900664, Wed Sep 21 20:20:43 2022)\n",
+      "(6_w,12)-aCMA-ES (mu_w=3.7,w_1=40%) in dimension 20 (seed=797197, Sat Oct  1 15:41:06 2022)\n",
       "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
-      "    1     12 -8.555027558462724e+01 1.0e+00 3.70e+00  4e+00  4e+00 0:00.0\n",
-      "    2     24 -8.320530215982602e+01 1.1e+00 3.45e+00  3e+00  4e+00 0:00.1\n",
-      "    3     36 -8.514155854227000e+01 1.1e+00 3.14e+00  3e+00  3e+00 0:00.1\n",
-      "   74    888 -1.031124140251126e+02 2.6e+00 4.98e-01  3e-01  6e-01 0:03.1\n",
-      "  100   1200 -1.033829911562183e+02 3.1e+00 1.93e-01  9e-02  2e-01 0:04.4\n",
-      "  200   2400 -1.040805552122735e+02 1.3e+01 9.12e-02  2e-02  2e-01 0:07.5\n",
-      "  300   3600 -1.043036431208065e+02 2.2e+01 3.86e-02  6e-03  8e-02 0:10.4\n",
-      "  400   4800 -1.047116503108057e+02 6.0e+01 9.48e-02  9e-03  3e-01 0:13.5\n",
-      "  500   6000 -1.049506951262709e+02 7.2e+01 2.69e-02  2e-03  7e-02 0:16.6\n",
-      "  600   7200 -1.050031039285537e+02 7.4e+01 6.99e-03  3e-04  1e-02 0:19.7\n",
-      "  700   8400 -1.051275199263706e+02 3.8e+02 6.41e-02  2e-03  6e-01 0:23.3\n",
-      "  800   9600 -1.052418175630565e+02 3.6e+02 5.52e-02  2e-03  4e-01 0:26.4\n",
-      "  900  10800 -1.054155623179565e+02 1.8e+02 2.07e-02  5e-04  7e-02 0:29.5\n",
-      " 1000  12000 -1.054263571726289e+02 1.1e+02 1.36e-03  3e-05  2e-03 0:32.7\n",
+      "    1     12 -9.005712238208412e+01 1.0e+00 3.77e+00  4e+00  4e+00 0:00.0\n",
+      "    2     24 -9.045392655922021e+01 1.1e+00 3.54e+00  3e+00  4e+00 0:00.1\n",
+      "    3     36 -8.739099117849202e+01 1.2e+00 3.39e+00  3e+00  3e+00 0:00.1\n",
+      "  100   1200 -1.030377441669562e+02 3.2e+00 3.15e-01  2e-01  4e-01 0:03.1\n",
+      "  200   2400 -1.037216291638774e+02 6.9e+00 5.23e-02  1e-02  7e-02 0:06.4\n",
+      "  300   3600 -1.038536279572472e+02 2.5e+01 1.82e-02  2e-03  4e-02 0:10.0\n",
+      "  400   4800 -1.040711545223367e+02 1.4e+02 5.86e-02  5e-03  3e-01 0:14.1\n",
+      "  500   6000 -1.049571439489878e+02 1.3e+02 1.07e-01  7e-03  4e-01 0:17.3\n",
+      "  600   7200 -1.051877545981671e+02 8.5e+01 5.03e-02  2e-03  1e-01 0:20.9\n",
+      "  700   8400 -1.053503183641461e+02 9.4e+01 2.33e-02  8e-04  6e-02 0:24.4\n",
+      "  800   9600 -1.053635323231274e+02 1.1e+02 1.38e-03  4e-05  3e-03 0:27.7\n",
+      "  900  10800 -1.053742471719861e+02 2.4e+02 2.81e-03  7e-05  1e-02 0:31.7\n",
+      " 1000  12000 -1.053759974343009e+02 1.6e+02 5.75e-04  1e-05  1e-03 0:36.5\n",
       "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
-      " 1100  13200 -1.054271452186321e+02 1.1e+02 1.29e-04  2e-06  2e-04 0:36.9\n",
-      " 1200  14400 -1.054306619902321e+02 2.7e+02 9.57e-04  1e-05  2e-03 0:40.7\n",
-      " 1300  15600 -1.054313617316700e+02 4.7e+02 5.66e-04  6e-06  2e-03 0:43.8\n",
-      " 1400  16800 -1.054486661940444e+02 6.4e+02 5.61e-03  5e-05  3e-02 0:46.9\n",
-      " 1500  18000 -1.054499249432563e+02 3.4e+02 1.94e-04  1e-06  4e-04 0:50.9\n",
-      " 1600  19200 -1.054499601494329e+02 2.5e+02 9.12e-06  5e-08  1e-05 0:54.3\n",
-      " 1700  20400 -1.054499614159358e+02 1.9e+02 4.98e-07  2e-09  4e-07 0:57.6\n",
-      " 1800  21600 -1.054499651653467e+02 1.8e+02 6.84e-06  2e-08  4e-06 1:00.7\n",
-      " 1900  22800 -1.054499659862256e+02 1.7e+02 4.66e-07  2e-09  2e-07 1:04.4\n",
-      " 2000  24000 -1.054499660452599e+02 1.7e+02 4.03e-08  1e-10  2e-08 1:08.4\n",
+      " 1100  13200 -1.054038280573632e+02 5.1e+02 2.95e-02  4e-04  2e-01 0:40.8\n",
+      " 1200  14400 -1.054352011510739e+02 3.2e+02 3.56e-03  5e-05  1e-02 0:45.6\n",
+      " 1300  15600 -1.054365041191729e+02 2.6e+02 2.86e-04  3e-06  6e-04 0:50.3\n",
+      " 1400  16800 -1.054462232223711e+02 1.6e+03 8.54e-03  7e-05  9e-02 0:55.0\n",
+      " 1500  18000 -1.054494508431022e+02 5.9e+02 1.55e-03  1e-05  6e-03 0:59.4\n",
+      " 1600  19200 -1.054499252479283e+02 3.0e+02 2.79e-04  2e-06  5e-04 1:03.4\n",
+      " 1700  20400 -1.054499653041328e+02 2.0e+02 6.56e-06  4e-08  7e-06 1:07.2\n",
+      " 1800  21600 -1.054499660177032e+02 1.9e+02 2.53e-07  1e-09  2e-07 1:10.8\n",
+      " 1900  22800 -1.054499660534032e+02 1.5e+02 3.70e-08  1e-10  2e-08 1:14.3\n",
+      " 2000  24000 -1.054499661010781e+02 1.5e+02 2.28e-08  6e-11  9e-09 1:17.8\n",
       "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
-      " 2100  25200 -1.054499660932733e+02 1.7e+02 1.18e-07  3e-10  4e-08 1:11.6\n",
-      " 2200  26400 -1.054499661028551e+02 1.6e+02 6.05e-09  1e-11  2e-09 1:15.3\n",
-      " 2300  27600 -1.054499661030998e+02 1.7e+02 2.34e-10  4e-13  5e-11 1:18.5\n",
-      " 2341  28092 -1.054499661031080e+02 1.5e+02 4.93e-11  7e-14  1e-11 1:20.3\n"
+      " 2100  25200 -1.054499661030538e+02 1.4e+02 1.00e-09  2e-12  3e-10 1:21.3\n",
+      " 2190  26280 -1.054499661031073e+02 1.4e+02 4.07e-11  8e-14  1e-11 1:24.4\n"
      ]
     },
     {
@@ -413,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,22 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'VisP': <shapely.geometry.polygon.Polygon at 0x7fd025a19d60>,\n",
-       " 'VisRL': <shapely.geometry.polygon.Polygon at 0x7fd0244ffdf0>,\n",
-       " 'VisAL': <shapely.geometry.polygon.Polygon at 0x7fd025d04670>,\n",
-       " 'VisL': <shapely.geometry.polygon.Polygon at 0x7fd0269e4d60>,\n",
-       " 'VisLI': <shapely.geometry.polygon.Polygon at 0x7fd026a381f0>,\n",
-       " 'VisPL': <shapely.geometry.polygon.Polygon at 0x7fd025d1c0a0>,\n",
-       " 'VisPOR': <shapely.geometry.polygon.Polygon at 0x7fd025d1c100>}"
+       "{'VisP': <shapely.geometry.polygon.Polygon at 0x7fae967a8310>,\n",
+       " 'VisRL': <shapely.geometry.polygon.Polygon at 0x7fae8e7e02b0>,\n",
+       " 'VisAL': <shapely.geometry.polygon.Polygon at 0x7fae8e7e04f0>,\n",
+       " 'VisL': <shapely.geometry.polygon.Polygon at 0x7fae95397e20>,\n",
+       " 'VisLI': <shapely.geometry.polygon.Polygon at 0x7fae95397070>,\n",
+       " 'VisPL': <shapely.geometry.polygon.Polygon at 0x7fae95397400>,\n",
+       " 'VisPOR': <shapely.geometry.polygon.Polygon at 0x7fae96a32730>}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
