--- a/mousenet_previous/example/MouseNet_Demo.ipynb
+++ b/mousenet_previous/example/MouseNet_Demo.ipynb
@@ -49,24 +49,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "69ae5efc",
+   "execution_count": 12,
+   "id": "10ff88c9-bd81-4557-bfd2-7356ed7bd15f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append('../')\n",
-    "sys.path.append('../cmouse/')\n",
-    "sys.path.append('../mouse_cnn/')\n",
+    "\n",
+    "sys.path.append('../../')\n",
+    "# sys.path.append('../../mouse_connectivity_models')\n",
+    "sys.path.append('../cmouse')\n",
+    "sys.path.append('../mouse_cnn')\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
-    "import torch"
+    "import torch\n",
+    "from anatomy import gen_anatomy\n",
+    "from architecture import Architecture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "69ae5efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# sys.path.append('.')\n",
+    "# sys.path.append('../cmouse/')\n",
+    "# sys.path.append('../mouse_cnn/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3c8ac619-7a4d-4edc-97f9-4ed75452d20e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/anastasiaa/Documents/UW/Mouse_CNN/mousenet/example\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e36cc7e7",
    "metadata": {},
    "outputs": [],
@@ -112,15 +148,67 @@
    "id": "3d7fdf5f",
    "metadata": {},
    "source": [
-    "<img src=\"network.jpg\"> "
+    "print(os.getcwd())<img src=\"network.jpg\"> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
+   "id": "4e7a42df-e1eb-445f-8481-9bd94733fa91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/anastasiaa/Documents/UW/Mouse_CNN/mousenet/example\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "dc95c3c1-9fdd-4b1e-ad86-6ee54098259a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Cellar/python@3.10/3.10.13/Frameworks/Python.framework/Versions/3.10/lib/python310.zip\n",
+      "-/opt/homebrew/Cellar/python@3.10/3.10.13/Frameworks/Python.framework/Versions/3.10/lib/python3.10\n",
+      "-/opt/homebrew/Cellar/python@3.10/3.10.13/Frameworks/Python.framework/Versions/3.10/lib/python3.10/lib-dynload\n",
+      "-\n",
+      "-/opt/homebrew/lib/python3.10/site-packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n-'.join(sys.path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "c960d5f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'anatomy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[54], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01manatomy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m gen_anatomy\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01marchitecture\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Architecture\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'anatomy'"
+     ]
+    }
+   ],
    "source": [
     "from anatomy import gen_anatomy\n",
     "from architecture import Architecture"
@@ -801,9 +889,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mousenet",
    "language": "python",
-   "name": "python3"
+   "name": "mousenet"
   },
   "language_info": {
    "codemirror_mode": {
@@ -815,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
